--- a/style1.css
+++ b/style1.css
@@ -85,6 +85,8 @@ header{
     margin-right: 30px;
     text-transform: uppercase;
     letter-spacing: 1px;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: 900;
 }
 /* head right links hover effect */
 .head-right a:hover{
@@ -107,6 +109,7 @@ header{
     width: 100%;
     height: 100%;
     position: relative;
+    backdrop-filter: blur(33px);
 }
 
 /* Hero video itself */
@@ -350,6 +353,9 @@ header{
     z-index: 1;
     max-width: 250px;
     color: lightgray;
+    font-family: poppins, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    letter-spacing: 2px;
+    font-weight: 500;
 }
 
 /* Card video */
@@ -365,19 +371,23 @@ header{
     bottom: 5%;
     left: 5%;
     padding: 10px 25px;
-    border: 1px solid gray;
+    border: 1px solid rgb(0, 0, 0);
     background-color: #0f1217;
-    color: gray;
+    color: rgb(255, 255, 255);
     border-radius: 20px;
     box-shadow: 0 0 5px lightgray;
     cursor: pointer;
     transition: 0.3s;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: 700;
 }
 
 /* Card hover effect */
 .card button:hover{
     box-shadow: 0 0 15px lightgray;
     opacity: 0.7px;
+    background-color: #ffffff;
+    color: black;
 }
 .card:hover{
     box-shadow: 0 0 15px rgb(213, 213, 213);
